<resources>
    <string name="app_name">Contador de ONO99</string>
    <string name="_0">0</string>
    <string name="_1">+1</string>
    <string name="_2">+2</string>
    <string name="_3">+3</string>
    <string name="_4">+4</string>
    <string name="_5">+5</string>
    <string name="_6">+6</string>
    <string name="_7">+7</string>
    <string name="_8">+8</string>
    <string name="_9">+9</string>
    <string name="_10">-10</string>
    <string name="_minus0">+0</string>
    <string name="_plus10">+10</string>
    <string name="back">BACK</string>
    <string name="ono99">ONO99</string>
    <string name="reset">RESET</string>
    <string name="calculadora_de_ono99">Calculadora de ONO99</string>
    <string name="historial">Historial</string>
</resources>